included indetail details about the tieers offered in loyalty program

--- a/Loyalty_Registration.html
+++ b/Loyalty_Registration.html
@@ -29,54 +29,87 @@
         <a class="Purchse-Button" href="Order Page.html">Purchase Items</a>      
    </header>
    <main>
-    <section class="Loyalty-Page-Section-1">
-        <div class="Tier-Alignment">
-            <h2> Discover Our Exclusive Loyalty Tiers & Rewards</h2>
-            <p>Embark on a journey of exclusive rewards with our loyalty program tiers. From Silver to Platinum, each tier unlocks a treasure trove of benefits designed to enhance your shopping experience. Whether it's earning points with every purchase, enjoying special discounts, or receiving personalized perks, there's something special waiting for every loyal customer. Join now and elevate your shopping experience with us!</p>
-            <div class="Loyalty-Introduction">
-                <div class="Silver" >
-                        <h3 class="Silver-Tier-Heading">Sliver Tier</h3>
-                        <h4>Silver Benefits</h4>
-                        <ul>
-                            <li>Points Accumulation</li>
-                            <li>Exclusive Weekly Deals</li>    
-                            <li>Birthday Discount</li>
-                            <li>Free Delivery</li>   
-                            <li>Early Access to Sales</li>  
-                        </ul>
+    <div class="Tier-Alignment">
+            <section class="Loyalty-Page-Section-1">
+                    <h2> Discover Our Exclusive Loyalty Tiers & Rewards</h2>
+                    <p>Embark on a journey of exclusive rewards with our loyalty program tiers. From Silver to Platinum, each tier unlocks a treasure trove of benefits designed to enhance your shopping experience. Whether it's earning points with every purchase, enjoying special discounts, or receiving personalized perks, there's something special waiting for every loyal customer. Join now and elevate your shopping experience with us!</p>
+                    <div class="Loyalty-Introduction">
+                        <div class="Silver" >
+                                <h3 class="Silver-Tier-Heading">Sliver Tier</h3>
+                                <h4>Silver Benefits</h4>
+                                <ul>
+                                    <li>Points Accumulation</li>
+                                    <li>Exclusive Weekly Deals</li>    
+                                    <li>Birthday Discount</li>
+                                    <li>Free Delivery</li>   
+                                    <li>Early Access to Sales</li>  
+                                </ul>
+                        </div>
+                        <div class="Gold" >
+                                <h3 class="Gold-Tier-Heading">Gold Tier</h3>
+                                <h4>Gold Benefits</h4>
+                                <ul>
+                                    <li>Accelerated Points Earning</li>
+                                    <li>VIP Customer Service</li>    
+                                    <li>Exclusive Product Previews</li>
+                                    <li>Double Points Day</li>   
+                                    <li>Special Event Invitations</li>  
+                                </ul>
+                        </div>
+                        <div class="Platinum" >
+                            <h3 class="Platinum-Tier-Heading">Platinum Tier</h3>
+                            <h4>Platinum Benefits</h4>
+                            <ul>
+                                <li>Triple Points Earning</li>
+                                <li>Personal Shopper Service</li>    
+                                <li>Customized Offers</li>
+                                <li>Complimentary Gift Basket</li>   
+                                <li>Priority Access</li>  
+                            </ul>
+                        </div
+                    </div>
                 </div>
-                <div class="Gold" >
-                        <h3 class="Gold-Tier-Heading">Gold Tier</h3>
-                        <h4>Gold Benefits</h4>
+            </section>
+            <section class="Tier-Detail">
+                    <h3>Explore Prime Grocers Loyalty Tiers</h3>
+                    <ol>
+                        <li><h4>Sliver Tier</h4></li>
+                        <p>Unlock exclusive benefits and elevate your shopping experience with our Silver Tier Membership. Enjoy a range of perks designed to reward your loyalty and enhance your savings. Here's what you get:</p>
                         <ul>
-                            <li>Accelerated Points Earning</li>
-                            <li>VIP Customer Service</li>    
-                            <li>Exclusive Product Previews</li>
-                            <li>Double Points Day</li>   
-                            <li>Special Event Invitations</li>  
+                            <li>Points Accumulation: Earn 1 point for every Rs.500 spent. Redeem points for discounts on future purchases.</li>
+                            <li>Exclusive Weekly Deals: Access special discounts on select products, exclusively available to silver tier members.</li>
+                            <li>Birthday Discount: Enjoy a 10% discount coupon during your birthday month as a silver tier perk.</li>
+                            <li>Free Delivery: Receive complimentary delivery on orders exceeding a specified amount (e.g., RS.2500) for silver tier members.</li>
+                            <li>Early Access to Sales: Be the first to shop seasonal sales and promotions before they're open to regular customers.</li>
                         </ul>
-                </div>
-                <div class="Platinum" >
-                    <h3 class="Platinum-Tier-Heading">Platinum Tier</h3>
-                    <h4>Platinum Benefits</h4>
-                    <ul>
-                        <li>Triple Points Earning</li>
-                        <li>Personal Shopper Service</li>    
-                        <li>Customized Offers</li>
-                        <li>Complimentary Gift Basket</li>   
-                        <li>Priority Access</li>  
-                    </ul>
-                </div
-            </div>
-        </div>
-    </section>
-    <section class="Tier-Detail">
-        <div class="Tier-Alignment">
-            <h3>Explore Prime Grocers Loyalty Tiers</h3>
-
-        </div>
-
-    </section>
+                        <li><h4>Gold Tier</h4></li>
+                        <p>Experience the epitome of luxury shopping with our Gold Tier Membership. Elevate your rewards and access unparalleled benefits tailored to your elite status. Here's what awaits you:</p>
+                        <ul>
+                            <li>Accelerated Points Earning: Earn 1.5 points for every Rs.500 spent, allowing you to accumulate rewards faster.</li>
+                            <li>VIP Customer Service: Gain access to a dedicated customer service hotline for expedited assistance with any inquiries or issues</li>
+                            <li>Exclusive Product Previews: Enjoy sneak peeks of new products before they are released to the public, giving you first dibs on the latest innovations.</li>
+                            <li>Double Points Day: Choose one day per month to earn double points on all purchases made, maximizing your rewards potential.</li>
+                            <li>Special Event Invitations: Receive coveted invitations to exclusive events such as tastings, cooking classes, or product launch parties, granting you insider access to unique experiences.</li>
+                        </ul>
+                        <li><h4>Platinum Tier</h4></li>
+                        <p>Embark on a journey of unparalleled luxury and exclusivity with our Platinum Tier Membership. Elevate your shopping experience to extraordinary heights with an array of premium benefits crafted to cater to your refined tastes. Here's what awaits you:</p>
+                        <ul>
+                            <li>Triple Points Earning: Earn a remarkable 3 points for every Rs.500 spent, allowing you to maximize your rewards accumulation like never before.</li>
+                            <li>Personal Shopper Service: Indulge in the expertise of a dedicated personal shopper who will assist you in finding products, placing orders, and offering personalized recommendations, ensuring a seamless and tailored shopping experience.</li>
+                            <li>Customized Offers: Delight in receiving bespoke promotions and discounts curated specifically for you, based on your unique shopping history and preferences, enhancing your savings on your favorite products.</li>
+                            <li>Complimentary Gift Basket: Celebrate the anniversary of your Platinum Tier Membership with a luxurious gourmet gift basket delivered straight to your doorstep, as our token of appreciation for your continued loyalty</li>
+                            <li>Priority Access: Gain exclusive priority access to limited edition products, high-demand items, and exclusive sales events, ensuring that you're always at the forefront of luxury shopping, ahead of other loyalty members.</li>
+                        </ul>
+                    </ol>
+            </section>
+            <section>
+                <h3>Join Our Exclusive Loyalty Program</h3>
+                <form action="">
+                    <label for="Fname">First Name:</label><input type="text">
+                </form>
+            </section>
+    </div>
+   
     
 
 
