Completed the loyalty Page along with the form

--- a/Loyalty_Registration.html
+++ b/Loyalty_Registration.html
@@ -102,12 +102,28 @@
                         </ul>
                     </ol>
             </section>
-            <section>
+            <section class="Membership-Form">
                 <h3>Join Our Exclusive Loyalty Program</h3>
-                <form action="">
-                    <label for="Fname">First Name:</label><input type="text">
-                </form>
-            </section>
+                <div class="Membership-Alignment">
+                    <form action="">
+                        <label for="Fname">First Name:</label>
+                        <input type="text"><br><br>
+                        <label for="Sname">Second Name:</label>
+                        <input type="text"><br><br>
+                        <label for="Pnumber">Mobile Number:</label>
+                        <input type="tel" placeholder="+94123456789" required><br><br>
+                        <label for="DOB:">Date Of Birth:</label>
+                        <input type="date" name="Dob" id="D-o-b"><br><br>
+                        <label for="Seclection">Membership Tier:</label>
+                        <select name="Membership" id="">
+                            <option value="">Sliver</option>
+                            <option value="">Gold</option>
+                            <option value="">Platinum</option>
+                        </select><br><br>
+                    </form>
+                    <center><a class="Place-Order-Button" href="Order Page.html" >Submit</a></h3></center><br><br>
+                </div>
+            </section>   
     </div>
    
     
