--- a/Order Page.html
+++ b/Order Page.html
@@ -48,7 +48,7 @@
                             <input type="number" placeholder="Enter Contact Number" required maxlength="10"><br><br>
                             <label for="Date">Date:</label>
                             <input type="date" name="Date" id="dateinput"><br><br>
-                            <label for="cars">Choose the Product:</label>
+                            <label for="products">Choose the Product:</label>
                             <select name="products">
                                     <option value="apple">Apple(500g)</option>
                                     <option value="bellpepper">Bell Pepper(100g)</option>
