made alignment changes to the diary product page

--- a/Dairy Products.html
+++ b/Dairy Products.html
@@ -36,8 +36,7 @@
                 <p>Greetings and welcome to our Dairy Products Page, where you can find a great selection of dairy basics that combine quality and freshness. To satisfy your culinary demands, we carefully choose only the best options, from silky yogurts to premium cheeses and creamy milk. Whether you're shopping for everyday essentials or creating a gourmet meal, our wide selection of dairy treats is sure to make your shopping trip more enjoyable. Examine our carefully chosen merchandise to experience the taste of quality with each purchase.</p>
                 <hr class="Line-Seperation">
             </div>
-        </section>  
-        <section class="Milk-Section">
+       <section class="Milk-Section">
             <h2 class="Milk-Heading">Milk</h2>
                 <div class="Milk-Section-Alignment">
                     <div>
@@ -66,13 +65,13 @@
                 <hr class="Line-Seperation ">
                 <h2 class="Curd-Heading">Curd</h2>
                 <div class="Curd-imgs">
-                    <img class="Curd-Img" src="Photos/Product images/curd1.png" alt="Curd">
+                    <img class="Curd-Img1" src="Photos/Product images/curd1.png" alt="Curd">
                     <img class="Curd-Img" src="Photos/Product images/curd2.png" alt="Curd">
                     <img class="Curd-Img" src="Photos/Product images/curd3.png" alt="Curd">
                     <img class="Curd-Img" src="Photos/Product images/curd4.png" alt="Curd">
                 </div>
                 <div class="Curd-Titles">
-                    <h3>Rich & Creamy Curd<br>Rs.500<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
+                    <div class="Text-Alignment"><h3>Rich & Creamy Curd<br>Rs.500<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3></div>
                     <h3>Set Curd (1kg)<br>Rs.1500<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
                     <h3>Set Curd (500g)<br>Rs.800<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
                     <h3>Regular Curd (500ml)<br>Rs.300<<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
@@ -89,10 +88,10 @@
                     <img class="Ghee-Img" src="Photos/Product images/Ghee3.png" alt="Ghee">
                 </div>
                 <div class="Ghee-Titles">
-                    <h3>Ghee (50ml)<br>Rs.250<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3>
+                    <div class="Text-Alignment3"><h3>Ghee (50ml)<br>Rs.250<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3></div>
                     <h3>Ghee (100ml)<br>Rs.500<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3>
                     <h3>Ghee (200ml)<br>Rs.1000<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3>
-                    <h3>Ghee (500ml)<br>Rs.1250<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3>
+                    <div class="Text-Alignment2"><h3>Ghee (500ml)<br>Rs.1250<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3></div>
                 </div>
             </div>
         </section>
