meta tags were missing so mad changes to that

--- a/Cosmetics_and_Skincare.html
+++ b/Cosmetics_and_Skincare.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prime Grocery</title>
     <link rel="stylesheet" href="Css Styling.css">
 </head>
@@ -64,7 +66,7 @@
                         </table>
                 </div>
          </section>
-         <section>
+         <section class="Hair_Care_Products">
                 <div class="Section-Alignment">
                     <h3 class="Makeup_Product_Heading">Enhance Your Beauty: Makeup Essentials</h3>
                     <table class="Cosmetics_Table">
