added mobile responsive

--- a/Home.html
+++ b/Home.html
@@ -54,10 +54,10 @@
                         <h2 class="Pepper">Bell Pepper<br>(100g)</h2>
                         <h2 class="Radish">Radish<br>(300g)</h2>
                         <h2 class="Pomegranates">Pomegranates<br>(300g)</h2>
-                        <h3>Rs.1500</h3>
-                        <h3>Rs.2500</h3>
-                        <h3>Rs.2000</h3>
-                        <h3>Rs.1000</h3>
+                        <h3 class="p1">Rs.1500</h3>
+                        <h3 class="p2">Rs.2500</h3>
+                        <h3 class="p3">Rs.2000</h3>
+                        <h3 class="p4">Rs.1000</h3>
                     </div>     
                 </div>
            </section>
@@ -74,12 +74,12 @@
                         <img class="oliveoil" src="Photos/Product images/Olive Oil.jpg">
                         <h2 class="content1">Artisanal Jam</h2>
                         <h2 class="content2">Artisan Cheese</h2>
-                        <h2 class="content3">Chocolate Assortment</h2>
+                        <h2 class="content3">Chocolate <br> Assortment</h2>
                         <h2 class="content4">Olive Oil</h2>
-                        <h3>Rs.1500</h3>
-                        <h3>Rs.2500</h3>
-                        <h3>Rs.2000</h3>
-                        <h3>Rs.1000</h3>
+                        <h3 class="price1">Rs.1500</h3>
+                        <h3 class="price2">Rs.2500</h3>
+                        <h3 class="price3">Rs.2000</h3>
+                        <h3 class="price4">Rs.1000</h3>
                     </div>
                 </div>     
             </Section>
