made the home page mobile responsive

--- a/Home.html
+++ b/Home.html
@@ -85,7 +85,7 @@
             </Section>
             <section class="Weekly-Deal-Section">
                     <div class="Section-Alignment">
-                        <h1><strong>Weekly Deal Section</strong></h1>
+                        <h1>Weekly Deal Section</h1>
                         <hr class="Weekly-Deal-Line-Seperation">
                         <u><h2><strong>Seafood</strong></h2></u>
                         <div class="Seafood">
@@ -143,6 +143,7 @@
                 </div>               
           </Section>
    </main>
+ 
  <footer>
             <!--Here in the footer tag i have used 'P' instead of using the heading tag which is 'H1, H2 ,H3 & etc', the reason for that is because
             once i use a 'H' tag by default a padding gets added around the text so that the length of the footer and the design gets cluttered even though
