made the diary product page mobile responsive

--- a/Dairy Products.html
+++ b/Dairy Products.html
@@ -33,7 +33,7 @@
   <main>
         <section class="Diary-Product-Intro-Section">
             <div class="Section-Alignment">
-                <u><h1><strong>Diary Products</strong></h1></u>
+                <h1 class="Diary-Main-Heading">Diary Products</h1>
                 <img class="Diary-Product-Main-Img" src="Photos/Product images/Diary Products Main.png" alt="dairyMainimg">
                 <p>Greetings and welcome to our Dairy Products Page, where you can find a great selection of dairy basics that combine quality and freshness. To satisfy your culinary demands, we carefully choose only the best options, from silky yogurts to premium cheeses and creamy milk. Whether you're shopping for everyday essentials or creating a gourmet meal, our wide selection of dairy treats is sure to make your shopping trip more enjoyable. Examine our carefully chosen merchandise to experience the taste of quality with each purchase.</p>
                 <hr class="Line-Seperation">
@@ -41,15 +41,15 @@
        <section class="Milk-Section">
             <h2 class="Milk-Heading">Milk</h2>
                 <div class="Milk-Section-Alignment">
-                    <div>
+                    <div class="Mobile-Alignment">
                         <ul>
-                            <li><h3>Sapins Bottled Milk (750ml)</h3></li>
+                            <li><h3 class="Heading1">Sapins Bottled Milk (750ml)</h3></li>
                             <img class="Milk-Bottle-Img1" src="Photos/Product images/MilkBottle.png" alt="Milk"><br><br><br>
-                            <li><h3>Sapins Bottled Milk (1Ltr)</h3></li>
+                            <li><h3 class="Heading2">Sapins Bottled Milk (1Ltr)</h3></li>
                             <img class="Milk-Bottle-Img2" src="Photos/Product images/MilkBottle2.png" alt="Milk">
-                            <li><h3>Sapins Diet Milk Packet (500ml)</h3></li>
+                            <li><h3 class="Heading3">Sapins Diet Milk Packet (500ml)</h3></li>
                             <img class="Milk-Bottle-Img3" src="Photos/Product images/Milkpacket.png" alt="Milkpacket"><br><br>
-                            <li><h3>Sapins Thick Milk Packet (500ml)</h3></li>
+                            <li><h3 class="Heading4" >Sapins Thick Milk Packet (500ml)</h3></li>
                             <img class="Milk-Bottle-Img4" src="Photos/Product images/Milkpacket2.png" alt="Milkpacket2">
                         </ul>    
                     </div> 
@@ -59,7 +59,7 @@
                         <p class="Milk-Phara2">Straight to your table, Sapins Bottled Milk (1 Liter) offers pure, creamy pleasure. Selected from the best dairy farms, every drink has a distinct flavor of quality and freshness. Comes in handy one-liter bottles, making it the ideal option for everyday indulgences or gourmet creations. Savor the richness and healthfulness of Sapins Bottled Milk, a classic choice for all your daily requirements.<br><br><b><h7>Rs.800</h7></b><br><a class="Milk-Buybutton" href="Order Page.html">Buy Now</a></p>
                         <p class="Milk-Phara3">The 500ml Sapins Diet Milk Packet provides a delicious treat without sacrificing guilt. This handy 500ml packet, designed with health-conscious consumers in mind, has all the nutritious benefits of milk but with less fat. Sourced from reputable dairy farms, it is the ideal beverage for anyone trying to keep a balanced lifestyle because every sip brings a cool blast of flavor. For a more enjoyable and lighter dairy experience, Sapins Diet Milk Packet (500ml) is the ideal choice, whether it is consumed on its own or combined with your preferred recipes.<br><br><b><h7>Rs.550</h7></b><br><a class="Milk-Buybutton" href="Order Page.html" >Buy Now</a></p>                
                         <p class="Milk-Phara4">The 500ml Sapins Thick Milk Packet gives you the opulent creaminess you want in a handy, user-friendly package. Savor the smooth flavor and creamy texture of this premium milk, which has been thoughtfully made for people who value a luxurious dairy experience. Proudly derived from premium dairy farms, every mouthful of Sapins Thick Milk leaves a delicious aftertaste. Savoring a moment of indulgence or adding a touch of luxury to your food preparations, Sapins Thick Milk Packet (500ml) is an ideal option to drizzle over porridge, integrate into smoothies, or taste on its own.<br><br><b><h7>Rs.600</h7></b><br><a class="Milk-Buybutton" href="Order Page.html">Buy Now</a></p>
-                    </div>    
+                    </div> 
                 </div>
         </section>
         <section class="Curd-Section">
@@ -73,10 +73,10 @@
                     <img class="Curd-Img" src="Photos/Product images/curd4.png" alt="Curd">
                 </div>
                 <div class="Curd-Titles">
-                    <div class="Text-Alignment"><h3>Rich & Creamy Curd<br>Rs.500<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3></div>
-                    <h3>Set Curd (1kg)<br>Rs.1500<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
-                    <h3>Set Curd (500g)<br>Rs.800<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
-                    <h3>Regular Curd (500ml)<br>Rs.300<<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
+                    <div class="Text-Alignment"><h3 class="Curdtxt1">Rich & Creamy Curd<br>Rs.500<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3></div>
+                    <h3 class="Curdtxt2">Set Curd (1kg)<br>Rs.1500<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
+                    <h3 class="Curdtxt3">Set Curd (500g)<br>Rs.800<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
+                    <h3 class="Curdtxt4">Regular Curd (500ml)<br>Rs.300<<br><br><a class="Curd-Buybutton" href="Order Page.html" >Buy Now</a></h3>
                 </div>
             </div>
         </section>
@@ -90,10 +90,10 @@
                     <img class="Ghee-Img" src="Photos/Product images/Ghee3.png" alt="Ghee">
                 </div>
                 <div class="Ghee-Titles">
-                    <div class="Text-Alignment3"><h3>Ghee (50ml)<br>Rs.250<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3></div>
-                    <h3>Ghee (100ml)<br>Rs.500<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3>
-                    <h3>Ghee (200ml)<br>Rs.1000<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3>
-                    <div class="Text-Alignment2"><h3>Ghee (500ml)<br>Rs.1250<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3></div>
+                    <div class="Text-Alignment3"><h3 class="Gheetxt1">Ghee (50ml)<br>Rs.250<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3></div>
+                    <h3 class="Gheetxt2">Ghee (100ml)<br>Rs.500<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3>
+                    <h3 class="Gheetxt3">Ghee (200ml)<br>Rs.1000<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3>
+                    <div class="Text-Alignment2"><h3 class="Gheetxt4">Ghee (500ml)<br>Rs.1250<br><br><a class="Ghee-Buybutton" href="Order Page.html" >Buy Now</a></h3></div>
                 </div>
             </div>
         </section>
