--- a/Dairy Products.html
+++ b/Dairy Products.html
@@ -82,6 +82,7 @@
         </section>
         <section class="Ghee-Section">
             <div class="Section-Alignment">
+                <hr class="Line-Seperation">
                 <h2 class="Ghee-Heading">Ghee</h2>
                 <div class="Ghee-Titles">
                     <img class="Ghee-Img" src="Photos/Product images/Ghee1.png" alt="Ghee">
