made the vegetables page mobile responsive

--- a/Vegetables.html
+++ b/Vegetables.html
@@ -40,11 +40,11 @@
                 <img class="Bitter-Melon-Img" src="Photos/Product images/Bitter Melon.jpg" alt="Bitter Melon">
                 <img class="Daikon-Radish-Img" src="Photos/Product images/Daikon Radish.jpg" alt="Daikon Radish">
                 <img class="Dragon-Img" src="Photos/Product images/Dragon Fruit.jpg" alt="Dragon Fruit">
-                <h3 class="Veg-Content">Thai EggPlant (250g)<br>Rs.200<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
-                <h3 class="Veg-Content">Bitter Melon (300g)<br>Rs.100<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
-                <h3 class="Veg-Content">Daikon Radish (300g)<br>Rs.120<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
-                <h3 class="Veg-Content">Dragon Fruit (1kg)<br>Rs.600<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
-            </div>
+                <h3 class="Veg-Content1">Thai EggPlant (250g)<br>Rs.200<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
+                <h3 class="Veg-Content2">Bitter Melon (300g)<br>Rs.100<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
+                <h3 class="Veg-Content3">Daikon Radish (300g)<br>Rs.120<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
+                <h3 class="Veg-Content4">Dragon Fruit (1kg)<br>Rs.600<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
+            </div> 
             <hr class="Vegetable-Page-Content-line-Seperation">
         </div>
     </section>
@@ -56,17 +56,17 @@
                 <img class="lettuce-Img" src="Photos/Product images/Lettuce.jpg" alt="Lettuce">
                 <img class="Totmato-Img" src="Photos/Product images/Tomato.jpg" alt="Tomato">
                 <img class="Carrot-Img" src="Photos/Product images/Carrots.jpg" alt="Carrot">
-                <h3 class="Veg-Content">Lettuce (100g)<br>Rs.50<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
-                <h3 class="Veg-Content">Tomato (70g)<br>Rs.70<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
-                <h3 class="Veg-Content">Carrot (300g)<br>Rs.140<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
+              <h3 class="Veg-Content2-1">Lettuce (100g)<br>Rs.50<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
+                <h3 class="Veg-Content2-2">Tomato (70g)<br>Rs.70<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
+                <h3 class="Veg-Content2-3">Carrot (300g)<br>Rs.140<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
             </div>
             <div class="Vegetables-Content2">
                 <img class="Broccoli-Img" src="Photos/Product images/Broccoli.jpg" alt="Broccoli">
                 <img class="BellPepper-Img" src="Photos/Product images/Bell Pepper_2.jpg" alt=" Bell Pepper">
                 <img class="Cucumbers-Img" src="Photos/Product images/Cucumbers.jpg" alt="Cucumbers">  
-                <h3 class="Veg-Content">Broccoli (500g)<br>Rs.580<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
-                <h3 class="Veg-Content">Bell Pepper (500g)<br>Rs.430<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
-                <h3 class="Veg-Content">Cucumbers (500g)<br>Rs.225<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
+                <h3 class="Veg-Content3-1">Broccoli (500g)<br>Rs.580<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
+                <h3 class="Veg-Content3-2">Bell Pepper (500g)<br>Rs.430<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
+                <h3 class="Veg-Content3-3">Cucumbers (500g)<br>Rs.225<br><br><a class="Buybutton" href="Order Page.html">Buy Now</a></h3>
             </div> 
             <hr class="Vegetable-Page-Content-line-Seperation">
         </div>
