made the cosmetics page mobile responsive

--- a/Cosmetics_and_Skincare.html
+++ b/Cosmetics_and_Skincare.html
@@ -39,7 +39,7 @@
                                 <th class="Table_size">Product Name</th>
                                 <th class="Table_size_2">Product Image</th>
                                 <th>Brand</th>
-                                <th>Product Details</th>
+                                <th class="Product_Details">Product Details</th>
                                 <th class="Shampoo_Price">Price</th>
                             </tr>
                             <tr>
