Updated References in Vegetable Page

--- a/Vegetables.html
+++ b/Vegetables.html
@@ -156,12 +156,29 @@
                     <p class="Contact-Title">Contact</p>
                     <div class="contact1"><img class="Tele-Icon" src="Icons/Telephone Icon.png" alt="">
                         <p >+94777777777</p></div>
-                </div>
+                    </div>
                 </div>
         </div>  
-
   </main>
-  
+            <!--Bibliography
+
+                Photos & Icons;
+
+                Thai Eggplant : Barksdale, T. (2023) Heap of Eggplants · Free Stock photo, Pexels. https://www.pexels.com/photo/heap-of-eggplants-19543593/. 
+                Bitter Melon: Rathmayer, M. (no date) Bitter melon on a black plate. https://www.imageprofessionals.com/en/images/13916889-Bitter-melon-on-a-black-plate. 
+                Daikon Radish: Nekrashevich, A. (2021) A Close-Up shot of white radishes · Free stock photo, Pexels. https://www.pexels.com/photo/a-close-up-shot-of-white-radishes-7214623/. 
+                Dragon Fruit: Fisk, T. (2020) Dragon Fruit · Free Stock photo, Pexels. https://www.pexels.com/photo/dragon-fruit-3691116/. 
+                Lettuce: Burrows, M. (2021) Unrecognizable customer with fresh lettuce · Free Stock Photo, Pexels. https://www.pexels.com/photo/unrecognizable-customer-with-fresh-lettuce-7129137/. 
+                Tomato: Pixabay (2017) Pile of red tomatoes · Free stock photo, Pexels. https://www.pexels.com/photo/pile-of-red-tomatoes-533280/. 
+                Tomato: Collins, N. (2018) Fill the Frame Photography of Carrots · Free stock photo, Pexels. https://www.pexels.com/photo/fill-the-frame-photography-of-carrots-1297256/. 
+                Broccoli: Lion, R. (2018) Selective Focus Photography of broccoli · Free stock photo, Pexels. https://www.pexels.com/photo/selective-focus-photography-of-broccoli-1118177/.
+                Bell Pepper: Santos, N. (2022) Bunch of yellow bell peppers in close-up photography · Free stock photo, Pexels. https://www.pexels.com/photo/bunch-of-yellow-bell-peppers-in-close-up-photography-14466704/. 
+                Cucumber: Bronzini, E. (2020) Close-Up photo of green cucumbers · Free stock photo, Pexels. https://www.pexels.com/photo/close-up-photo-of-green-cucumbers-5503189/. 
+                Spring Asparagus: Bonacci, J. (2015) The beauty of spring asparagus. https://theheritagecook.com/beauty-spring-asparagus/. 
+                Summer Sweet Corn: Limited, A. (no date) Agriculture - Three ears of tri color sweet corn with one still in it's husk, on wood in the studio., Alamy Images. https://www.alamy.com/stock-photo-agriculture-three-ears-of-tri-color-sweet-corn-with-one-still-in-its-10663562.html?imageid=D90E94C9-837F-4F60-984F-5BD5880E5A4B&p=228787&pn=1&searchId=448dc4c493e7e7022360b6c1822e1b2b&searchtype=0. 
+                Pumpkin: Nixon, E. (2021) View from above of Lots Orange Pumpkins · Free stock photo, Pexels. https://www.pexels.com/photo/view-from-above-of-lots-orange-pumpkins-9889790/. 
+
+            -->
  </footer>   
 </body>
 </html>
